--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.926.0",
     "@aws-sdk/client-s3": "^3.913.0",
+    "@aws-sdk/client-ses": "^3.927.0",
     "@aws-sdk/lib-dynamodb": "^3.926.0",
     "@aws-sdk/lib-storage": "^3.913.0",
     "@google/generative-ai": "^0.24.1",
