--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "node build/index.js",
-    "dev": "tsc && node build/index.js"
+    "start": "node --env-file=.env build/index.js",
+    "dev": "tsc && node build/index.js",
+    "api": "node --env-file=.env build/server.js"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.926.0",
@@ -21,12 +22,15 @@
     "@google/generative-ai": "^0.24.1",
     "@modelcontextprotocol/sdk": "^0.5.0",
     "axios": "^1.6.0",
-    "dotenv": "^16.3.1",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "fluent-ffmpeg": "^2.1.3"
+    "fluent-ffmpeg": "^2.1.3",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
-    "@types/express": "^5.0.3",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.5",
     "@types/fluent-ffmpeg": "^2.1.28",
     "@types/node": "^20.19.22",
     "typescript": "^5.0.0"
