--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,176 @@
-# Ocultar claves de entorno y secretos
+.gitignore 
+
+# ===================================
+# ARCHIVOS SENSIBLES Y SECRETOS
+# ===================================
+# Variables de entorno y claves API
 .env
+.env.local
+.env.development
+.env.test
+.env.production
+.env.*.local
 
-# Ignorar todas las dependencias de Node
+# Archivos de configuración con credenciales
+config/secrets.json
+config/credentials.json
+*.pem
+*.key
+*.cert
+*.p12
+
+# ===================================
+# DEPENDENCIAS
+# ===================================
+# Node modules
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Ignorar el código compilado de TypeScript
+# ===================================
+# CÓDIGO COMPILADO
+# ===================================
+# TypeScript build output
 build/
+dist/
+*.tsbuildinfo
 
-# Opcional: Archivos de log
-*.log
+# Client build
+client/dist/
+client/build/
 
-# Opcional: Archivos de configuración del sistema operativo
-.DS_Store
-Thumbs.db
-
+# ===================================
+# LOGS Y DEBUGGING
+# ===================================
 logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# ===================================
+# BASES DE DATOS LOCALES
+# ===================================
+# SQLite
+*.sqlite
+*.sqlite3
+*.db
+
+# MongoDB
+data/
+dump/
+
+# ===================================
+# ARCHIVOS DEL SISTEMA OPERATIVO
+# ===================================
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+.directory
+.Trash-*
+
+# ===================================
+# IDEs Y EDITORES
+# ===================================
+# VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# JetBrains IDEs
+.idea/
+*.iml
+*.iws
+*.ipr
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Vim
+*.swp
+*.swo
+*~
+
+# ===================================
+# CACHE Y TEMPORALES
+# ===================================
+# Cache de npm/yarn
+.npm
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+
+# Cache de TypeScript
+*.tsbuildinfo
+
+# Cache de ESLint
+.eslintcache
+
+# Cache de Vite
+.vite/
+client/.vite/
+
+# Archivos temporales
+*.tmp
+*.temp
+.cache/
+.temp/
+
+# ===================================
+# TESTING
+# ===================================
+coverage/
+.nyc_output/
+*.lcov
+
+# ===================================
+# ARCHIVOS DE USUARIO Y UPLOADS
+# ===================================
+# Uploads locales (si no usas S3 en desarrollo)
+uploads/
+public/uploads/
+client/public/uploads/
+
+# ===================================
+# OTROS
+# ===================================
+# Lock files (opcional, algunos equipos prefieren commitearlos)
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
+
+# Archivos de respaldo
+*.bak
+*.backup
+*.old
+
+# Archivos de certificados SSL locales
+ssl/
+certs/
+
+# Archivos de Gemini AI (si guardas respuestas localmente)
+.gemini/
+*.gemini.cache
