--- a/package.json
+++ b/package.json
@@ -19,19 +19,27 @@
     "@aws-sdk/client-ses": "^3.927.0",
     "@aws-sdk/lib-dynamodb": "^3.926.0",
     "@aws-sdk/lib-storage": "^3.913.0",
-    "@google/generative-ai": "^0.24.1",
+    "@aws-sdk/s3-request-presigner": "^3.937.0",
+    "@google/genai": "^1.30.0",
     "@modelcontextprotocol/sdk": "^0.5.0",
+    "@splinetool/react-spline": "github:splinetool/react-spline",
     "axios": "^1.6.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "winston": "^3.18.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/fluent-ffmpeg": "^2.1.28",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.19.22",
     "typescript": "^5.0.0"
   }
